--- a/css/modal.css
+++ b/css/modal.css
@@ -140,7 +140,7 @@ input, form{
 }
 
 .colorEvent-yellow{
-    background-color: yellow;
+    background-color: rgb(136, 136, 2);
 }
 
 .colorEvent-blue{
